inventories-storage/security.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: "strict-mtls-policy"
  namespace: "inventories-storage"
spec:
  mtls:
    mode: STRICT
