inventories-storage/batches.yaml
##################################################################################################
# batches service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: batches
  labels:
    app: batches
    service: batches
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: batches
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: batches-v1
  labels:
    app: batches
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: batches
      version: v1
  template:
    metadata:
      labels:
        app: batches
        version: v1
    spec:
      serviceAccountName: medisupply-batches

      containers:
      - name: batches
        image:  public.ecr.aws/a7x9j8u1/medisupply/inventories-storage/batches-service:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 2
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
