inventories-storage/distribution-centers.yaml
##################################################################################################
# distribution-centers service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: distribution-centers
  labels:
    app: distribution-centers
    service: distribution-centers
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: distribution-centers
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: distribution-centers-v1
  labels:
    app: distribution-centers
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: distribution-centers
      version: v1
  template:
    metadata:
      labels:
        app: distribution-centers
        version: v1
    spec:
      serviceAccountName: medisupply-distribution-centers

      containers:
        - name: distribution-centers
          image: public.ecr.aws/a7x9j8u1/medisupply/inventories-storage/distribution-centers-service:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
