inventories-storage/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inventories-storage-route
spec:
  # The name of the Gateway that this route belongs to
  parentRefs:
    - name: medisupply-gateway
      namespace: default
  rules:
    # Batches service routing
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/batches
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: batches
          port: 3000
    # Distribution centers service routing
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/distribution-centers
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: distribution-centers
          port: 3000
